--- a/pend/subaerial3.html
+++ b/pend/subaerial3.html
@@ -131,6 +131,15 @@
 
 </style>
 <body>
+    <div class="text">
+    <a href="subaerial1.html">.</a>
+        <a href="subaerial2.html">.</a>
+            <a href="subaerial3.html">.</a>
+                <a href="subaerial4.html">.</a>
+                    <a href="subaerial5.html">.</a>
+                    <a href="subaerial6.html">.</a>
+                </div>
+    <div>
 
 <div id="div1">
     <img id="bl1" src="images/e1.png">
