--- a/pend/subaerial2.html
+++ b/pend/subaerial2.html
@@ -131,6 +131,16 @@
 
 </style>
 <body>
+
+    <div class="text">
+    <a href="subaerial1.html">.</a>
+        <a href="subaerial2.html">.</a>
+            <a href="subaerial3.html">.</a>
+                <a href="subaerial4.html">.</a>
+                    <a href="subaerial5.html">.</a>
+                    <a href="subaerial6.html">.</a>
+                </div>
+    <div>
     <br>
         <br>    <br>
 <div id="div1">
