--- a/pend/subaerial1.html
+++ b/pend/subaerial1.html
@@ -132,15 +132,7 @@
 </style>
 <body>
 
-    <div class="text">
-    <a href="subaerial1.html">.</a>
-        <a href="subaerial2.html">.</a>
-            <a href="subaerial3.html">.</a>
-                <a href="subaerial4.html">.</a>
-                    <a href="subaerial5.html">.</a>
-                    <a href="subaerial6.html">.</a>
-                </div>
-    <div>
+
 
 <div id="div1">
     <img id="bl1" src="images/sa-07.png">
@@ -372,6 +364,20 @@
 
 </div>
 
+<div class="text">
+
+<a href="subaerial.html">SUBAERIAL/</a>
+    <a href="subaerial1.html">Mohama Tajalof</a>
+        <a href="subaerial2.html">Emmidio Vasquez</a>
+            <a href="subaerial3.html">Hibiscus</a>
+                <a href="subaerial4.html">RAW SILVER</a>
+                </div>
+
+        </div>
+
+<div class="soundcloud">
+ <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/506497563&color=%23030000&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+</div>
 
 </body>
 </html>
