--- a/pend/brassica.html
+++ b/pend/brassica.html
@@ -83,8 +83,8 @@
 <br>
 <br>
 
-<div>
-    <img id="div6" src="images/ba.png">
+<div id="div6">
+    <img id="bl6" src="images/ba.png">
 </div>
 
 <br>
