--- a/pend/brassica.html
+++ b/pend/brassica.html
@@ -2,12 +2,13 @@
 <html>
 <head>
         <link rel="stylesheet" href="css/brassica.css">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
     </head>
 <style> 
 </style>
 <body>
-
 
 <br>
 
@@ -54,7 +55,7 @@
     <img id="bl5" src="images/b5.png">
 </div>
 
-
+  <script src="fade.js"></script>
 
 </body>
 </html>
