--- a/pend/brassica.html
+++ b/pend/brassica.html
@@ -4,10 +4,14 @@
         <link rel="stylesheet" href="css/brassica.css">
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+
     </head>
+
+
 <style> 
 </style>
+
+
 <body>
 
 <br>
@@ -56,6 +60,11 @@
 </div>
 
   <script src="fade.js"></script>
+
+
+      <div id="diva">
+    <img src="images/sid.png">
+</div>
 
 </body>
 </html>
