--- a/Rockery/rockery.html
+++ b/Rockery/rockery.html
@@ -10,11 +10,7 @@
 </style>
 <body>
 
-
-<audio autoplay>
-<source src="audio.mp3" type="audio/mpeg">
-</audio>
-
+    
 
 <div id="div1">
     <img id="bl1" src="images/b1.png">
@@ -143,6 +139,44 @@
 <div id="dive">
     <img src="images/bra2.png">
 </div>
+
+<div id="divf">
+    <img src="images/teu3.png">
+</div>
+
+<div id="divg">
+    <img src="images/del1.png">
+</div>
+
+<div id="divh">
+    <img src="images/del2.png">
+</div>
+
+<div id="divi">
+    <img src="images/cae.png">
+</div>
+
+
+<div id="divki">
+    <img id="bl1" src="images/k1.png">
+</div>
+
+<div id="divkii">
+    <img id="bl2" src="images/k2.png">
+</div>
+
+<div id="divkiii">
+    <img id="bl4" src="images/k3.png">
+</div>
+
+<div id="divkvi">
+    <img id="bl9" src="images/k4.png">
+</div>
+
+<div id="divkv">
+    <img id="bl5" src="images/k5.png">
+</div>
+
 
   <script src="fade.js"></script>
 
