--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 
 <!-- Honest -->
   <div class="w3-quarter squareb">
-    <img src="images/bra1.png" style="width:100%">
+    <img class="low" src="images/bra1.png" style="width:100%">
 </div>
 
   <div class="w3-quarter squareo">
