--- a/index2.html
+++ b/index2.html
@@ -32,27 +32,27 @@
 
 <!-- Honest -->
   <div class="w3-quarter squareb">
-    <img class="low" src="images/bra1.png" style="width:100%">
+  <a href="contact.html">  <img src="images/bra1.png" style="width:100%"> </a>
 </div>
 
   <div class="w3-quarter squareo">
-        <img src="images/bra2.png" style="width:100%">
+    <a href="https://honestelectronics.bandcamp.com/"> <img src="images/bra2.png" style="width:100%"> </a>
 </div>
 
   <div class="w3-quarter squareg">
-        <img src="images/bra3.png" style="width:100%">
+      <a href="https://soundcloud.com/honest-electronics/"><img src="images/bra3.png" style="width:100%"> </a>
 </div>
 
   <div class="w3-quarter squareb">
-        <img src="images/bra4.png" style="width:100%">
+      <a href="radio.html">  <img src="images/bra4.png" style="width:100%"> </a>
 </div>
 
   <div class="w3-quarter  squareo">
-        <img src="images/bra5.png" style="width:100%">
+      <a href="https://honestelectronics.bandcamp.com/merch/">  <img src="images/bra5.png" style="width:100%"> </a>
 </div>
 
   <div class="w3-quarter squareg">
-        <img src="images/bra6.png" style="width:100%">
+       <a href="https://honestelectronics.bandcamp.com/merch/"> <img src="images/bra6.png" style="width:100%"> </a>
 </div>
 
 
