--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
+      <link href="https://fonts.googleapis.com/css?family=Space+Mono:700" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/he_Osv_icon.ico" />
     <meta property="og:title" content="Honest Electronics" />
 	<meta property="og:type" content="info" />
@@ -32,7 +32,7 @@
 
 <!-- Honest -->
   <div class="w3-quarter squareb">
-  <a href="contact.html">  <img src="images/bra1.png" style="width:100%"> </a>
+  <a href="https://www.facebook.com/honestelect/">  <img src="images/bra1.png" style="width:100%"> </a>
 </div>
 
   <div class="w3-quarter squareo">
@@ -52,17 +52,21 @@
 </div>
 
   <div class="w3-quarter squareg">
-       <a href="https://honestelectronics.bandcamp.com/merch/"> <img src="images/bra6.png" style="width:100%"> </a>
+       <a href="gathering.html"> <img src="images/bra6.png" style="width:100%"> </a>
 </div>
 
 
 
 <div>
-    <img class="last2" src="images/bra.png">
+    <img class="last" src="images/bra.png">
 </div>
 
 <div>
     <img class="last2" src="images/4.jpg">
+</div>
+
+<div>
+    <img class="last2" src="images/g33.jpg">
 </div>
 
 <div>
@@ -74,10 +78,29 @@
 </div>
 
 <div>
+    <img class="last2" src="images/g32.jpg">
+</div>
+
+<div>
     <img class="last2" src="images/g34.jpg">
 </div>
 
+<div>
+    <img class="last2" src="images/1.jpg">
+</div>
 
+
+<div>
+    <h1 class="yes">
+
+      We are a community cultivating platform and a record label from Cyprus. Our aim is to support and promote our local scene's talent. An action to highlight the importance of local networking whilst simultaneously attempting to connect with an international network.<br>
+
+
+       <br>
+       <br>
+       <br>
+       <br>
+</div>
 
 	</body>
 
