--- a/gathering.html
+++ b/gathering.html
@@ -109,7 +109,7 @@ On this Live performance he will provide a deep and mystic soundscape and create
 
   <div class="w3-quarter squareb">
                <h3 class="yes">Mohama Tajalof</h3>
-	       	<p class="yes">“Cypriot DJ from Nicosia. She has shaped and have been shaped by the local Cypriot music scene from 2011 and is formerly known as Mohama Tajalof and SB9; as she likes to take a liberal approach to her material and identity. Also, co-founder of events series “C’est démon!”. 
+	       	<p class="yes">Formerly known as Mohama Tajalof - she is the founder of "Subaerial" micro-ceremonies and co-founder of "C'est démon!" and "Programmed For Love" events series, that are mainly based on the island's grounds. Always trying to serve deep and from within, without any chains on her material or identity.
             <br>
             <br>
 	       		<a href="https://soundcloud.com/mohamatajalof" target="_blank">Soundcloud</a></p>
