--- a/code/gathering4.html
+++ b/code/gathering4.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="jquery-latest.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Chivo" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 
     </head>
 <style>
@@ -16,12 +16,10 @@
 </div>
 
 <div id="names2">
-<marquee behavior="scroll" direction="right">HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ </marquee>
+<marquee behavior="scroll" direction="left">HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ HONEST ELECTRONICS PRESENTS ⚡︎ THREE DAY ELECTRONIC MUSIC FESTIVAL ⚡︎ OUTDOORS ⚡︎ BY THE LAKE ⚡︎ 30+ LOCAL ACTS ⚡︎ </marquee>
 </div>
 
-<div id="logo">
-    <img src="images/logo.png">
-</div>
+
 
 <div id="back1">
     <img src="images/back1.png">
