--- a/gathering.html
+++ b/gathering.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/he_Osv_icon.ico" />
     <meta property="og:title" content="Honest Electronics" />
 	<meta property="og:type" content="info" />
-	<meta property="og:url" content="wwww.honestelectronics.info" />
+	<meta property="og:url" content="www.honestelectronics.club" />
 	<meta property="og:description" content="Do—It—Together Collective & Record Label from Cyprus" />
 	<meta property="og:image" content="https://s18.postimg.org/rpjzqjf09/Screen_Shot_2018-03-16_at_12.40.55_PM.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,6 +44,16 @@
 	       	<a href="https://soundcloud.com/aristodemos" target="_blank">Soundcloud</a></p>
 </div>
 
+  <div class="w3-quarter  squarea">
+<h3 class="yes4">Androula</h3>
+	       	<p class="yes4">Trained in classical singing and a devotee to both the electronic and the choral music genre, Androula's sets combine eerie vocal harmonies with somber ambiance and the occasional deep bass - a sorcerous summons to a journey through grief, strife, and absolution.
+            <br>
+            <br>
+	       		<a href="<a href="https://soundcloud.com/androula-kafa" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
+
   <div class="w3-quarter squareo">
  <h3 class="yes2">Ayios Loizos</h3>
 	       	<p class="yes2">Loizos Olympios is a visual artist living and working in Limassol. His current practice combines photography, cutting as drawing, collage and artists’ publications. His playlists have been published in The Wire magazine’s charts. Additionally he has collaborated with numerous CY based theatre and dance groups for visual and/or audio enhancements. He podcasts irregularly on Mixcloud as AyiosLoizos.
@@ -54,8 +64,9 @@
 </div>
 
   <div class="w3-quarter squareg">
-      <h3 class="yes3">BillyD</h3>
-	       	<p class="yes3">BillyD is a ‘Music Technology Specialist’ gradfuate, based in Cyprus. He is a DJ and a Producer appreciated in the local and international Techno scene. He was the co-founder of the live-streaming channel ‘Weedo_It’ and ‘Honest Electronics’ sub-label ‘Dishonest’. With performances at many clubs and bars in Cyprus and UK, BillyD had established his own identity of music style, going from Deep to Minimal Techno. 
+      <h3 class="yes3">BillyD x HXOS</h3>
+	       	<p class="yes3">When you play back to back, there is a lot of letting go involved; With a long history of collecting and listening together, the collections of Billy & HXOS are intimately connected, and they blend harmoniously. Their music is minimal; sometimes descending to the depths, other times strong, other times intelligent - it all evolves out of the first mix. Let’s see where they take us this time, with another performance that truly captures the art of the back to back.
+
             <br>
             <br>
 
@@ -99,6 +110,16 @@ On this Live performance he will provide a deep and mystic soundscape and create
 
 </div>
 
+   <div class="w3-quarter  squarea">
+<h3 class="yes4">Fngsrm</h3>
+	       	<p class="yes4">Fngsrm - a sonic exploration that draws inspiration from demented memoirs.
+            <br>
+            <br>
+	       		<a href="<a href="https://soundcloud.com/fngsroom" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
+
   <div class="w3-quarter squareo">
   <h3 class="yes2">isel</h3>
 	       	<p class="yes2">Isel is a moniker of Yiannis Eliades. Athough Yiannis’ relationship with music has been ongoing for years, his approach to music as a means of expression has evolved over time and has taken various forms. He currently produces and performs using a blend of analog and digital synthesizers, drum machines and twisted gathered field recordings. His recent musical adventures include composing soundtracks for short films and performing live scores for longer films.  
@@ -118,6 +139,17 @@ On this Live performance he will provide a deep and mystic soundscape and create
 
 </div>
 
+ <div class="w3-quarter  squarea">
+<h3 class="yes4">kalaqs</h3>
+	       	<p class="yes4">A music passionate and a daze lover. Kalaqs communicates through arts and music. A frequent dj at local parties and an occasional live performer. This time he will be presenting a dj Set, among with some original mixes.
+            <br>
+            <br>
+	       		<a href="<a href="https://www.mixcloud.com/kalaqs/" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
+
+
   <div class="w3-quarter squareb">
                <h3 class="yes">Mohama Tajalof</h3>
 	       	<p class="yes">Formerly known as Mohama Tajalof - she is the founder of "Subaerial" micro-ceremonies and co-founder of "C'est démon!" and "Programmed For Love" events series, that are mainly based on the island's grounds. Always trying to serve deep and from within, without any chains on her material or identity.
@@ -125,6 +157,17 @@ On this Live performance he will provide a deep and mystic soundscape and create
             <br>
 	       		<a href="https://soundcloud.com/mohamatajalof" target="_blank">Soundcloud</a></p>
 </div>
+
+<div class="w3-quarter  squarea">
+<h3 class="yes4">Panayotis</h3>
+	       	<p class="yes4">He works with visual and or acoustical elements to create distinct objects and texts that frequently cross the lines between parody / reality / auteurship / art / pop. As a musician he performs using a selection of electronic modular sythesizers, drum machines and haptic instruments, guitars, drums and microphones which metamorphose constantly as his sets are often based on autoschediasm.
+            <br>
+            <br>
+	       		<a href="<a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
+
 
   <div class="w3-quarter  squareo">
       <h3 class="yes2" >RAW SILVER</h3>
@@ -142,6 +185,23 @@ On this Live performance he will provide a deep and mystic soundscape and create
             <br>
 	       		<a href="https://soundcloud.com/honest-electronics/hmix19-sofronis-moon-mall" target="_blank">Soundcloud</a></p>
 </p>
+</div>
+
+  <div class="w3-quarter  squarea">
+<h3 class="yes4">Φ</h3>
+	       	<p class="yes4">Φ is the alias of Chris Foti, a techno DJ who has been an integral member of the local rave and club scene for a number of years. Whilst he is always remaining dynamic and continuously encapsulating new triggers, remains firmly rooted in techno.  His sound is smoky and atmospheric and usually falls under the ambient techno subcategory. Though he often likes to mix in the reverberated sounds of dub techno and even some minimal influences.
+            <br>
+            <br>
+	       		<a href="<a href="https://soundcloud.com/whirldos" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
+
+ <div class="w3-quarter squareo">
+            <h3 class="yes2">Socrates</h3>
+	       	<p class="yes2">klubd booker and resident dj, passionate about vinyl, predominantly interested in the original forms and roots of the music.<br><br>
+
+<a href="https://www.residentadvisor.net/dj/socrates" target="_blank">Soundcloud</a></p></p>
 </div>
 
 
@@ -163,7 +223,7 @@ Now she makes music on the computer.
 </div>
 
   <div class="w3-quarter squareg">
-     <h3 class="yes3">mindscape (CY)</h3>
+     <h3 class="yes3">mindscape</h3>
 	       	<p class="yes3">“a sophisticated listener, a potential lover” 	
             <br>
             <br>
@@ -171,7 +231,7 @@ Now she makes music on the computer.
 	       </div>
 
   <div class="w3-quarter squareb">
-  <h3 class="yes">UVGLOV (CY)</h3>
+  <h3 class="yes">UVGLOV</h3>
 	       	<p class="yes">UVGLOV is an audio-visual alias of Anastasia Dolitsay, (who just recently turned 19). Anastasia was born in Moscow and spent most of her childhood visiting Cyprus. Her mysterious melodies, often accompanied by melancholic vocals  and audio recordings of the Cypriot flora and fauna, encapsulate these aspects of her personality. 
             <br>
             <br>
@@ -188,7 +248,20 @@ Now she makes music on the computer.
             <br>
 	       </div>
 
-  
+   <div class="w3-quarter  squarea">
+<h3 class="yes4">Yakovlev</h3>
+	       	<p class="yes4">Yakovlev is the sound project of Andreas Yakovlev Michaelides,
+mixing together field recordings, acoustic instruments and modular synthesis in order to explore the grey zones between physics, psychology and music.
+
+Dense Drones,
+Surrealistic Soundscapes,
+Dreams and Dadaism.
+            <br>
+            <br>
+	       		<a href="<a href="https://soundcloud.com/whirldos" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
 
 
        <br>
