--- a/gathering.html
+++ b/gathering.html
@@ -24,8 +24,6 @@
 
 
 
-<iframe src="code/gathering4.html" class="ifra"></iframe>
-
 
 <h3 class="aha">The Gathering is a yearly festival organised by Honest Electronics in order to promote local underground talent.</h3>
 
@@ -74,6 +72,20 @@
 
 </div>
 
+	  <div class="w3-quarter squareb" >
+
+             <h3 class="yes">Carnal Throes</h3>
+	       	<p class="yes">Love is subliminal<br>
+ Justice is subjective<br>
+	       		War is subconscious<br>
+
+            <br>
+            <br>
+	       		<a href="https://soundcloud.com/nutty-wombat-records/015-hades-militia-pyrgatory" target="_blank">Soundcloud</a></p>
+</p>
+
+</div>
+
   <div class="w3-quarter squareb">
       <h3 class="yes">Didgeridoo Meditation</h3>
 	       	<p class="yes">Ayis Livadas is a didgeridoo performer and various indigenous instruments player, focusing on producing sounds for healing and deep meditation. He carries out personal and group Sound Healing Meditations, personal Sound Healing and Vibrational – no touch massage, group meditations, and live performances. 
@@ -96,19 +108,6 @@ On this Live performance he will provide a deep and mystic soundscape and create
 </p>
 </div>
 
-	  <div class="w3-quarter squareb" >
-
-             <h3 class="yes"> Eugene Skull</h3>
-	       	<p class="yes">Love is subliminal<br>
- Justice is subjective<br>
-	       		War is subconscious<br>
-
-            <br>
-            <br>
-	       		<a href="https://soundcloud.com/nutty-wombat-records/015-hades-militia-pyrgatory" target="_blank">Soundcloud</a></p>
-</p>
-
-</div>
 
    <div class="w3-quarter  squarea">
 <h3 class="yes4">Fngsrm</h3>
@@ -157,6 +156,20 @@ On this Live performance he will provide a deep and mystic soundscape and create
             <br>
 	       		<a href="https://soundcloud.com/mohamatajalof" target="_blank">Soundcloud</a></p>
 </div>
+
+
+ <div class="w3-quarter  squarea">
+<h3 class="yes4">Niko Mas</h3>
+	       	<p class="yes4">Emotional minimal, ambient textures, and happiness, until the last beat drops. A closing ceremony, under the azure sky.
+            <br>
+            <br>
+	       		<a href="<a href="https://www.mixcloud.com/kalaqs/" target="_blank">Soundcloud</a></p>
+	       	            <br>
+            <br>
+	       </div>
+
+
+
 
 <div class="w3-quarter  squarea">
 <h3 class="yes4">Panayotis</h3>
