--- a/gathering.html
+++ b/gathering.html
@@ -138,15 +138,7 @@ On this Live performance he will provide a deep and mystic soundscape and create
 
 </div>
 
- <div class="w3-quarter  squarea">
-<h3 class="yes4">kalaqs</h3>
-	       	<p class="yes4">A music passionate and a daze lover. Kalaqs communicates through arts and music. A frequent dj at local parties and an occasional live performer. This time he will be presenting a dj Set, among with some original mixes.
-            <br>
-            <br>
-	       		<a href="<a href="https://www.mixcloud.com/kalaqs/" target="_blank">Soundcloud</a></p>
-	       	            <br>
-            <br>
-	       </div>
+ 
 
 
   <div class="w3-quarter squareb">
@@ -163,7 +155,7 @@ On this Live performance he will provide a deep and mystic soundscape and create
 	       	<p class="yes4">Emotional minimal, ambient textures, and happiness, until the last beat drops. A closing ceremony, under the azure sky.
             <br>
             <br>
-	       		<a href="<a href="https://www.mixcloud.com/kalaqs/" target="_blank">Soundcloud</a></p>
+	       		<a href="<a href="https://soundcloud.com/honest-electronics/heua004-niko-mas-hedonism" target="_blank">Soundcloud</a></p>
 	       	            <br>
             <br>
 	       </div>
