--- a/gathering.html
+++ b/gathering.html
@@ -197,7 +197,7 @@ On this Live performance he will provide a deep and mystic soundscape and create
 	       	<p class="yes4">Φ is the alias of Chris Foti, a techno DJ who has been an integral member of the local rave and club scene for a number of years. Whilst he is always remaining dynamic and continuously encapsulating new triggers, remains firmly rooted in techno.  His sound is smoky and atmospheric and usually falls under the ambient techno subcategory. Though he often likes to mix in the reverberated sounds of dub techno and even some minimal influences.
             <br>
             <br>
-	       		<a href="<a href="https://soundcloud.com/whirldos" target="_blank">Soundcloud</a></p>
+	       		<a href="<a href="https://soundcloud.com/chris-foti" target="_blank">Soundcloud</a></p>
 	       	            <br>
             <br>
 	       </div>
